--- a/style/main.scss
+++ b/style/main.scss
@@ -9,7 +9,7 @@ body {
 .wrapper {}
 
 .inner {
-    width: 1300px;
+    width: 1200px;
     height: auto;
     margin: 0 auto;
 }
@@ -95,11 +95,11 @@ a {
 
 
 
-.wrapper>header {
-    position: absolute;
+.wrapper > header {
+    position: fixed;
     width: 100%;
     height: 100px;
-    background: none;
+    background: rgba(255, 255, 255, 0.3);
     z-index: 50;
 }
 
@@ -300,15 +300,20 @@ display: none;
 
 .hotCon {
     display: flex;
+    justify-content: space-between;
     width: 100%;
     height: 700px;
 }
 
+.hot img {
+    width: 100%;
+    height: 100%;
+    background: contain;
+}
+
 .best1 {
-    width: 400px;
+    width: 420px;
     height: 700px;
-    margin-right: 20px;
-    border: 1px solid green;
 }
 
 .hotCon ul {
@@ -316,33 +321,51 @@ display: none;
     justify-content: space-between;
     flex-wrap: wrap;
     row-gap: 20px;
-    width: 880px;
+    width: 760px;
 }
 
 .hotCon li {
-    width: 280px;
+    width: 240px;
     height: 340px;
     float: left;
-    border: 1px solid blue;
 }
 
 .hotCon a {
     display: block;
     width: 100%;
     height: 100%;
+    border: 1px solid #ddd;
+    box-sizing: border-box;
 }
 
 .newCon ul {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 340px;
+    height: 390px;
 }
 
 .newCon li {
-    width: 244px;
+    width: 224px;
     height: 100%;
-    border: 1px solid green;
+}
+
+.newCon a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #ddd;
+    box-sizing: border-box;
+}
+
+.newCon img {
+    width: 100%;
+    height: 310px;
+}
+
+.newTxt{
+    width: 100%;
+    height: 80px;
 }
 
 .ad {}
@@ -356,13 +379,14 @@ display: none;
 .rank {}
 
 .rankNav {
-    margin-bottom: 20px;
+    
 }
 
-.rankNav ul {
+.rankNav {
     border: 1px solid blue;
     display: flex;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .rankNav li {}
@@ -377,30 +401,88 @@ display: none;
 
 .rankCon {}
 
-.rankCon ul {
+.rankAll{
+    position: relative;
+    width: 1200px;
+    height: 430px;
+}
+
+.rankAll > ul {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: space-between;
     width: 100%;
     height: 430px;
 }
 
-.rankCon li {
-    width: 420px;
-    height: 100%;
-    border: 1px solid green;
+.rank_concert:hover .rankCon_concert{
+    display: flex;
 }
 
-.rankCon a {
+.rankLi {
+    width: 386px;
+    height: 100%;
+    
+}
+
+.rankLi a {
     position: relative;
     display: block;
     width: 100%;
     height: 100%;
+    border: 1px solid #ddd;
+    box-sizing: border-box;
 }
 
-.rankConImg {
+.rankLi a:hover .rankConImg1,
+.rankLi a:hover .rankConImg2,
+.rankLi a:hover .rankConImg3{
+    width: 130%;
+    height: 130%;
+    transition: 0.7s;
+}
+
+
+.rankConImg{
+    position: relative;
     width: 100%;
-    height: 350px;
-    background-color: antiquewhite;
+    height: 350PX;
+    overflow: hidden;
+}
+
+.rankConImg1,
+.rankConImg2,
+.rankConImg3{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 110%;
+    height: 110%;
+    filter: blur(7px) brightness(70%);
+}
+
+.rankConImg1{
+    background: url(../img/rank1.jpg) no-repeat center center / cover;
+}
+
+.rankConImg2{
+    background: url(../img/rank2.jpg) no-repeat center center / cover;
+}
+
+.rankConImg3{
+    background: url(../img/rank3.jpg) no-repeat center center / cover;
+}
+
+.rankConImg img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 280px;
 }
 
 .text {
@@ -410,16 +492,24 @@ display: none;
     width: 100%;
     height: 80px;
     align-items: center;
-    background-color: pink;
+}
+
+.text h3,
+.text p {
+    width: 90%;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .text h3 {
-    font-size: 17px;
+    margin-bottom: 5px;
     font-weight: bold;
 }
 
 .text p {
-    font-size: 15px;
+    font-size: 14px;
     color: #aaa;
 }
 
