--- a/style/main.scss
+++ b/style/main.scss
@@ -41,16 +41,65 @@ a {
 }
 
 .popUp {
-    display: none;
+    // display: none;
     /*나중에 지우기*/
     position: fixed;
-    width: 500px;
-    height: 400px;
+    width: 380px;
+    height: 500px;
     bottom: 30px;
     left: 30px;
-    border: 1px solid #292929;
+    border: 1px solid #ccc;
     z-index: 999;
+    background: #fff;
+
 }
+
+.popUp ul{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 10px;
+    width: 100%;
+    height: 454px;
+    padding: 10px;
+    box-sizing: border-box;
+    border-bottom: 1px solid #ccc;
+}
+
+.popUp li{
+    width: 175px;
+    height: 212px;
+    background-color: yellow;
+}
+
+.closebtn{
+    display: block;
+    width: 10px;
+    height: 10px;
+    background: url(../img/delete.png) no-repeat center center / contain;
+}
+
+.popUp img{
+    width: 100%;
+    height: 100%;
+}
+
+.popClose{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    background: #eee;
+}
+
+.popClose label{
+    font-size: 14px;
+}
+
+
 
 /* 왼쪽 히든 메뉴 */
 
