--- a/style/main.css
+++ b/style/main.css
@@ -574,22 +574,22 @@ main .review .reviewBoard .inputBox .plusBtn {
 }
 main .review .reviewBoard .listBox .listBoxUl {
   border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
 }
 main .review .reviewBoard .listBox .listBoxUl .newLi {
   position: relative;
   padding: 10px;
-  background: green;
+  border-bottom: 1px solid #ccc;
 }
 main .review .reviewBoard .listBox .listBoxUl .newLi .proflie {
   display: flex;
   align-items: center;
   width: 300px;
   height: 30px;
-  background: pink;
 }
 main .review .reviewBoard .listBox .listBoxUl .newLi .proflie .pro {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 25px;
   height: 25px;
   float: left;
@@ -605,24 +605,35 @@ main .review .reviewBoard .listBox .listBoxUl .newLi .likeBtn {
   top: 10px;
   right: 10px;
 }
+main .review .reviewBoard .listBox .listBoxUl .newLi .likeBtn .like {
+  margin-right: 7px;
+  cursor: pointer;
+}
+main .review .reviewBoard .listBox .listBoxUl .newLi .likeBtn .hate {
+  cursor: pointer;
+}
 main .review .reviewBoard .listBox .listBoxUl .newLi .revTxt {
   width: 1000px;
   height: auto;
   padding-left: 35px;
   margin: 10px 0;
   box-sizing: border-box;
-  background: yellow;
 }
 main .review .reviewBoard .listBox .listBoxUl .newLi .revTxt .conName {
   margin-bottom: 5px;
 }
 main .review .reviewBoard .listBox .listBoxUl .newLi .etc {
-  width: 300px;
+  width: auto;
   height: auto;
   padding-left: 35px;
   box-sizing: border-box;
   font-size: 13px;
-  background: navajowhite;
+}
+main .review .reviewBoard .listBox .listBoxUl .newLi .etc .date {
+  margin-right: 10px;
+}
+main .review .reviewBoard .listBox .listBoxUl .newLi .etc .declaration {
+  cursor: pointer;
 }
 main .lastSec {
   width: 100%;
