--- a/style/join.css
+++ b/style/join.css
@@ -24,23 +24,20 @@
 .wrapper .joinBox .user .joinId,
 .wrapper .joinBox .user .joinpw,
 .wrapper .joinBox .user .joinpw2,
-.wrapper .joinBox .user .name,
-.wrapper .joinBox .user .userImage {
+.wrapper .joinBox .user .name {
   padding: 8px 0;
 }
 .wrapper .joinBox .user .joinId span,
 .wrapper .joinBox .user .joinpw span,
 .wrapper .joinBox .user .joinpw2 span,
-.wrapper .joinBox .user .name span,
-.wrapper .joinBox .user .userImage span {
+.wrapper .joinBox .user .name span {
   display: block;
   font-size: 14px;
 }
 .wrapper .joinBox .user .joinId input,
 .wrapper .joinBox .user .joinpw input,
 .wrapper .joinBox .user .joinpw2 input,
-.wrapper .joinBox .user .name input,
-.wrapper .joinBox .user .userImage input {
+.wrapper .joinBox .user .name input {
   width: 100%;
   height: 50px;
   padding: 0 10px;
@@ -50,9 +47,26 @@
   outline: none;
   font-size: 17px;
 }
-.wrapper .joinBox .user #userImg {
-  margin-top: 10px;
-  font-size: 14px;
+.wrapper .joinBox .user .joinId .errorJoinId,
+.wrapper .joinBox .user .joinId .errorJoinPw,
+.wrapper .joinBox .user .joinId .errorJoinPw2,
+.wrapper .joinBox .user .joinId .errorJoinName,
+.wrapper .joinBox .user .joinpw .errorJoinId,
+.wrapper .joinBox .user .joinpw .errorJoinPw,
+.wrapper .joinBox .user .joinpw .errorJoinPw2,
+.wrapper .joinBox .user .joinpw .errorJoinName,
+.wrapper .joinBox .user .joinpw2 .errorJoinId,
+.wrapper .joinBox .user .joinpw2 .errorJoinPw,
+.wrapper .joinBox .user .joinpw2 .errorJoinPw2,
+.wrapper .joinBox .user .joinpw2 .errorJoinName,
+.wrapper .joinBox .user .name .errorJoinId,
+.wrapper .joinBox .user .name .errorJoinPw,
+.wrapper .joinBox .user .name .errorJoinPw2,
+.wrapper .joinBox .user .name .errorJoinName {
+  background: transparent;
+  margin-left: 10px;
+  color: red;
+  font-weight: bold;
 }
 .wrapper .joinBox button {
   width: 100%;
