--- a/style/main.css
+++ b/style/main.css
@@ -150,7 +150,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px;
+  padding: 0 100px;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
@@ -206,7 +206,7 @@ a {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 400px;
+  width: 450px;
 }
 #header .rightHeader .search {
   display: flex;
@@ -227,15 +227,17 @@ a {
 #header .rightHeader .search .goSearch {
   width: 30px;
   height: 30px;
-  margin-right: 15px;
+  margin-right: 7px;
   background: url("../img/search.png") no-repeat center center/contain;
   cursor: pointer;
 }
-#header .rightHeader .myPage {
-  width: 30px;
-  height: 30px;
-  background: url("../img/myPage.png") no-repeat center center/contain;
-  cursor: pointer;
+#header .rightHeader .myPageActive {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: auto;
+  font-weight: bold;
 }
 
 main {
@@ -313,6 +315,36 @@ main .hot .hotCon .best1 {
   width: 420px;
   height: 700px;
 }
+main .hot .hotCon .best1 img {
+  width: 100%;
+  height: 610PX;
+}
+main .hot .hotCon .best1 .best1Txt {
+  width: 100%;
+  height: 90px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 10px;
+  border-bottom: 1px solid #ccc;
+}
+main .hot .hotCon .best1 .best1Txt h3,
+main .hot .hotCon .best1 .best1Txt p {
+  width: 90%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+main .hot .hotCon .best1 .best1Txt h3 {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+main .hot .hotCon .best1 .best1Txt p {
+  font-size: 14px;
+  color: #aaa;
+}
 main .hot ul {
   display: flex;
   justify-content: space-between;
@@ -326,11 +358,44 @@ main .hot ul li {
   float: left;
 }
 main .hot ul li a {
+  position: relative;
   display: block;
   width: 100%;
   height: 100%;
   border: 1px solid #ddd;
   box-sizing: border-box;
+  overflow: hidden;
+}
+main .hot ul li a img {
+  transition: 0.5s;
+}
+main .hot ul li a .bestTxt {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-align: center;
+  color: #f1f1f1;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+main .hot ul li a .bestTxt h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+main .hot ul li a .bestTxt p {
+  font-size: 14px;
+  line-height: 1.2rem;
+}
+main .hot ul li a:hover .bestTxt {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+main .hot ul li a:hover img {
+  transform: scale(1.1);
 }
 main .newCon ul {
   display: flex;
@@ -349,13 +414,39 @@ main .newCon ul li a {
   border: 1px solid #ddd;
   box-sizing: border-box;
 }
-main .newCon ul li a img {
+main .newCon ul li a .newImg {
+  position: relative;
+}
+main .newCon ul li a .newImg img {
   width: 100%;
   height: 310px;
 }
-main .newCon ul li a .newTxt {
-  width: 100%;
-  height: 80px;
+main .newCon ul li a .newImg .dDay {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  row-gap: 5px;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 170px;
+  height: 100px;
+  border: 3px solid #EC7D2C;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #f1f1f1;
+}
+main .newCon ul li a .newImg .dDay span:first-of-type {
+  color: #EC7D2C;
+  font-size: 25px;
+  font-weight: bold;
+}
+main .newCon ul li a .newImg .dDay span:last-of-type {
+  font-size: 20px;
+}
+main .newCon ul li a .text p {
+  color: #EC7D2C;
 }
 main .ad {
   width: 100%;
@@ -562,6 +653,7 @@ main .review .reviewBoard .inputBox .inputText {
   height: 50px;
   max-height: 60px;
   margin-right: 10px;
+  padding: 0 10px;
   border: 1px solid #ccc;
   box-sizing: border-box;
   overflow: hidden;
@@ -629,7 +721,8 @@ main .review .reviewBoard .listBox .listBoxUl .newLi .revTxt {
   box-sizing: border-box;
 }
 main .review .reviewBoard .listBox .listBoxUl .newLi .revTxt .conName {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  font-size: 12px;
 }
 main .review .reviewBoard .listBox .listBoxUl .newLi .etc {
   width: auto;
