--- a/style/main.scss
+++ b/style/main.scss
@@ -330,7 +330,7 @@ main {
         }
 
         .prevBtn,
-        .nextBtn {
+        .nextBtn{
             position: absolute;
             top: 50%;
             color: white;
@@ -339,18 +339,17 @@ main {
             cursor: pointer;
         }
         
-        .prevBtn {
+        .prevBtn{
             left: 50px;
         }
         
-        .nextBtn {
+        .nextBtn{
             right: 50px;
         }
     }
     
-    
-    .hot {
-        .hotCon {
+    .hot{
+        .hotCon{
             display: flex;
             justify-content: space-between;
             width: 100%;
@@ -509,26 +508,20 @@ main {
                             font-size: 25px;
                             font-weight: bold;
                         }
-
                         span:last-of-type{
                             font-size: 20px;
                         }
-
+                    }
                 }
-                }
-                
                 
                 .text{
                     p{
                         color: #EC7D2C;
                     }
                 }
-
-                
             }
         }
     }
-    
     
     .ad {
         width: 100%;
@@ -578,14 +571,11 @@ main {
                 .slick-dots .slick-active {
                     background: lightgray;
                 }
-            }
-
-
+        }
     }
     
     .rank {
         .rankNav {
-            border: 1px solid blue;
             display: flex;
             justify-content: center;
             margin-bottom: 20px;
@@ -597,6 +587,10 @@ main {
                     padding: 10px;
                     font-size: 17px;
                 }
+
+                // .bold{
+                //     font-weight: bold;
+                // }
             }
         }
 
@@ -605,6 +599,10 @@ main {
                 position: relative;
                 width: 1200px;
                 height: 430px;
+
+                // .show{
+                //     display: flex;
+                // }
 
                 ul {
                     position: absolute;
@@ -681,7 +679,7 @@ main {
                     }
                 }
 
-                .rankCon_musical{
+                .rankConMusical{
                     .rankConImg1{
                         background: url(../img/rank_musical1.jpg) no-repeat center center / cover;
                     }
@@ -693,7 +691,7 @@ main {
                     }
                 } 
                 
-                .rankCon_concert{
+                .rankConConcert{
                     .rankConImg1{
                         background: url(../img/rank_concert1.jpg) no-repeat center center / cover;
                     }
@@ -705,7 +703,7 @@ main {
                     }
                 }
 
-                .rankCon_theater{
+                .rankConTheater{
                     .rankConImg1{
                         background: url(../img/rank_theater1.jpg) no-repeat center center / cover;
                     }
@@ -717,7 +715,7 @@ main {
                     }
                 }
 
-                .rankCon_classic{
+                .rankConClassic{
                     .rankConImg1{
                         background: url(../img/rank_classic1.jpg) no-repeat center center / cover;
                     }
@@ -729,7 +727,7 @@ main {
                     }
                 }
 
-                .rankCon_ex{
+                .rankConEx{
                     .rankConImg1{
                         background: url(../img/rank_ex1.jpg) no-repeat center center / cover;
                     }
@@ -745,13 +743,32 @@ main {
         }
     }
     
-    .interview {}
-    
-    .interviewSlider {
-        width: 100%;
-        height: 600px;
-        background: #ccc;
+    .interview {
+        h2{}
+
+        .interviewSlider {
+            width: 100%;
+            height: 600px;
+            background: #ccc;
+
+            .interviewitem{
+                float: left;
+                width: 840px;
+                height: 100%; 
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    }
+            }
+        }    
+            
     }
+
+}
+    
+    
     
     .review {
         width: 100%;
